fixed a layout problem

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -813,8 +813,8 @@ pre {
 }
 
 .stacked-image {
-  flex: 1;
-  cursor: pointer;
+  width: 100%;
+  height: 100%;
   position: relative;
 }
 
@@ -825,12 +825,33 @@ pre {
   border-radius: 5px;
 }
 
+.stacked-image-container {
+  position: relative;
+  flex: 1;
+  cursor: pointer;
+}
+
 .more-images-container {
   position: relative;
   flex: 1;
 }
 
 .more-images {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
+  font-size: 1.5rem;
+  border-radius: 5px;
+}
+
+.overlay {
   position: absolute;
   top: 0;
   left: 0;
